# macACE

./: .gitignore  CMakeLists.txt  README.md  buildbuild.sh  main.c
data/assets/: BG1.bm  defender_mask.bm  king_A.bm  king_mask.bm
data/font/: myacefont.fnt
data/palettes/: BasePal2.gpl  BasePal3.gpl  DV5Base.gpl  addHex.py  sprites.gpl
data/palettes/sources/: defwin.gpl
dataSources/assets/: attackers.bm  clashFX.bm  clashFX_mask.bm
dataSources/palettes/: GamePalette.plt
dataSources/palettes/sources/: NewBase2.gpl  NewBase3.gpl
dataSources/release/: HnefataflACE.adf  readme.txt
src/: game.c  game.h  input.c  input.h  menu.c  mouse.c  mouse.h  states.h
